--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
     left: 250px;
 }
 
-#paint-collection {
+#paintings {
     max-width: 800px;
     margin: 0 auto;
     margin-top: 10vh;
