--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     font-family: Arial, Verdana, sans-serif;
 }
 
-#header {
+#header1 {
     background-color: black;
     padding: 1em 1em;
     text-align: center;
