--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ body {
 #paintings {
     max-width: 800px;
     margin: 0 auto;
-    margin-top: 10vh;
+    margin-top: 1vh;
 }
 
 .card {
@@ -111,6 +111,9 @@ p {
 
 button {
     background-color: white;
-    padding: 1em 2em;
+    padding: 3em 3em;
+    position: relative;
+    left: 10px;
+    margin-top: 1rem;
+    margin-bottom: .5rem;
 }
-
